--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,7 +6,7 @@
 
 .date {
   font-family: 'Roboto Mono', monospace;
-  color: #aaa;
+  color: #919191;
   margin: 0;
 }
 
